Refatoração do Login com Google
Adicionado método para logar usuário automaticamente sem tela adicional
com o Google na abertura do app.
Adicionado primeira implementação para esconder botao de login caso o
usuário esteja logado.(Só funciona atualmente com o Google)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,13 @@
         android:onClick="readQRCode"/>
 
     <Button
+        android:id="@+id/login_button"
         android:text="Login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/login"
         android:onClick="login" />
 
 </RelativeLayout>
