--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,10 +11,9 @@
     tools:context="com.cademeupet.cademeupet.LoginActivity">
 
     <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_height="wrap_content"
+        android:id="@+id/google_sign_in_button"
         android:layout_width="wrap_content"
-        android:layout_marginTop="100dp"
-        android:layout_alignParentTop="true"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
