--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,14 @@
         android:layout_alignParentEnd="true"
         android:onClick="login" />
 
+    <Button
+        android:text="Inserir código"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonQRCode"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:id="@+id/buttonInsertCode"
+        android:onClick="insertCode" />
+
 </RelativeLayout>
