Arrumado inconsistencias e implementado formato para pegar id correto para envio de mensagens

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:onClick="readQRCode"/>
 
     <Button
-        android:id="@+id/login_profile_button"
+        android:id="@+id/buttonLoginORProfile"
         android:text="Login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
         android:text="Test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button2"
+        android:id="@+id/buttonTest"
         android:onClick="databaseTest" />
 
 </RelativeLayout>
