Adicionado informação de especie na hora do registro de um animal

--- a/app/src/main/res/layout/activity_pet_register.xml
+++ b/app/src/main/res/layout/activity_pet_register.xml
@@ -98,4 +98,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <TextView
+        android:text="Specie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textPetSpecie"
+        android:layout_below="@+id/radioGroupSex"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="18sp" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerSpecie"
+        android:entries="@array/array_species"
+        android:layout_below="@+id/textPetSpecie"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
