--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="com.cademeupet.cademeupet.MainActivity">
 
     <Button
-        android:text="Ler QRCode"
+        android:text="Read QRCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonQRCode"
@@ -30,7 +30,7 @@
         android:onClick="login" />
 
     <Button
-        android:text="Inserir código"
+        android:text="Insert code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonQRCode"
