--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonTest"
-        android:onClick="databaseTest" />
+        android:onClick="databaseTest"
+        android:visibility="gone" />
 
 </RelativeLayout>
