Fazendo layout da página inicial.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -11,15 +12,6 @@
     tools:context="com.cademeupet.cademeupet.MainActivity">
 
     <Button
-        android:text="Read QRCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonQRCode"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="readQRCode"/>
-
-    <Button
         android:id="@+id/buttonLoginORProfile"
         android:text="Login"
         android:layout_width="wrap_content"
@@ -27,17 +19,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:onClick="login" />
-
-    <Button
-        android:text="Insert code"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonQRCode"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:id="@+id/buttonInsertCode"
-        android:onClick="insertCode" />
+        android:onClick="login"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/mainbuttonshape" />
 
     <Button
         android:text="Test"
@@ -46,5 +32,47 @@
         android:id="@+id/buttonTest"
         android:onClick="databaseTest"
         android:visibility="gone" />
+
+    <Button
+        android:text="Insert code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonInsertCode"
+        android:onClick="insertCode"
+        android:layout_marginBottom="22dp"
+        android:layout_above="@+id/buttonLoginORProfile"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/mainbuttonshape" />
+
+    <Button
+        android:text="Read QRCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonQRCode"
+        android:onClick="readQRCode"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/topbuttonshape"
+        android:layout_alignBottom="@+id/buttonInsertCode"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="54dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        app:srcCompat="@mipmap/ic_cademeupet_logo"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/buttonQRCode" />
 
 </RelativeLayout>
