Fazendo layout da página de login.

--- a/app/src/main/res/drawable/loginbuttonshape.xml
+++ b/app/src/main/res/drawable/loginbuttonshape.xml
@@ -4,7 +4,7 @@
         android:radius="0dp"
         />
     <solid
-        android:color="#5E972D"
+        android:color="#9DD7F2"
         />
     <padding
         android:left="0dp"
