Criando layout da tela de cadastro de pet, visualização de pet encontrado e formulário de cadastro de pet, revertendo estado de teste e alterando ícone do app.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonTest"
         android:onClick="databaseTest"
-        android:visibility="gone" />
+        android:visibility="gone" />     <!--MUDAR PARA "visible" PARA FAZER TESTE-->
 
     <Button
         android:text="Insert code"
