--- a/app/src/main/res/layout/activity_pet_register.xml
+++ b/app/src/main/res/layout/activity_pet_register.xml
@@ -16,9 +16,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/register"
-        android:onClick="registerUser" />
+        android:onClick="registerUser"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/mainbuttonshape"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:text="Pet Registration:"
