--- a/app/src/main/res/layout/activity_pet_vault.xml
+++ b/app/src/main/res/layout/activity_pet_vault.xml
@@ -11,14 +11,19 @@
     android:paddingTop="0dp"
     tools:context="@drawable/ic_action_name">
 
-    <LinearLayout
-        android:id="@+id/hsvLinearLayout"
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_height="match_parent">
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/hsvLinearLayout"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp">
+        </LinearLayout>
+
+    </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
