--- a/app/src/main/res/layout/activity_pet_data.xml
+++ b/app/src/main/res/layout/activity_pet_data.xml
@@ -11,166 +11,181 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cademeupet.cademeupet.PetDataActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textPetSex"
-        android:textSize="24sp"
-        android:layout_below="@+id/textPetName"
-        android:layout_alignLeft="@+id/textPetName"
-        android:layout_alignStart="@+id/textPetName" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textPetName"
-        android:textSize="24sp"
-        android:layout_alignBaseline="@+id/labelPetName"
-        android:layout_alignBottom="@+id/labelPetName"
-        android:layout_toRightOf="@+id/labelPetSpecie"
-        android:layout_toEndOf="@+id/labelPetSpecie"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textPetSpecie"
-        android:textSize="24sp"
-        android:layout_below="@+id/textPetSex"
-        android:layout_alignLeft="@+id/textPetSex"
-        android:layout_alignStart="@+id/textPetSex" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textOwnerName"
-        android:textSize="24sp"
-        android:layout_below="@+id/textDadosDono"
-        android:layout_toRightOf="@+id/labelOwnerPhone"
-        android:layout_toEndOf="@+id/labelOwnerPhone"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textOwnerEmail"
-        android:textSize="24sp"
-        android:layout_below="@+id/textOwnerName"
-        android:layout_alignLeft="@+id/textOwnerName"
-        android:layout_alignStart="@+id/textOwnerName" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textOwnerPhone"
-        android:textSize="24sp"
-        android:layout_below="@+id/textOwnerEmail"
-        android:layout_alignLeft="@+id/textOwnerEmail"
-        android:layout_alignStart="@+id/textOwnerEmail" />
-
-    <ImageView
-        app:srcCompat="@android:drawable/ic_menu_gallery"
-        android:id="@+id/imagePetImage"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="9dp"
-        android:layout_height="120dp"
-        android:layout_width="120dp"
-        android:layout_toLeftOf="@+id/labelPetSpecie"
-        android:layout_toStartOf="@+id/labelPetSpecie" />
-
-    <TextView
-        android:text="Pet Informations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="30sp"
-        android:textStyle="normal|bold"
-        android:textAllCaps="false" />
+        android:layout_alignParentStart="true">
 
-    <TextView
-        android:text="Owner Informations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textDadosDono"
-        android:textSize="30sp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textStyle="normal|bold" />
 
-    <TextView
-        android:text="Email:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/labelOwnerEmail"
-        android:textSize="24sp"
-        android:layout_below="@+id/labelOwnerName"
-        android:layout_alignLeft="@+id/labelOwnerPhone"
-        android:layout_alignStart="@+id/labelOwnerPhone"
-        android:textStyle="normal|bold" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:text="Name:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/labelOwnerName"
-        android:textSize="24sp"
-        android:layout_below="@+id/textDadosDono"
-        android:layout_alignLeft="@+id/labelOwnerEmail"
-        android:layout_alignStart="@+id/labelOwnerEmail"
-        android:textStyle="normal|bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textPetSex"
+                android:textSize="24sp"
+                android:layout_below="@+id/textPetName"
+                android:layout_alignLeft="@+id/textPetName"
+                android:layout_alignStart="@+id/textPetName" />
 
-    <TextView
-        android:text="Phone:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/labelOwnerPhone"
-        android:textSize="24sp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_below="@+id/labelOwnerEmail"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textStyle="normal|bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textPetName"
+                android:textSize="24sp"
+                android:layout_alignBaseline="@+id/labelPetName"
+                android:layout_alignBottom="@+id/labelPetName"
+                android:layout_toRightOf="@+id/labelPetSpecie"
+                android:layout_toEndOf="@+id/labelPetSpecie"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp" />
 
-    <TextView
-        android:text="Sex:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/labelPetSex"
-        android:textSize="24sp"
-        android:textStyle="normal|bold"
-        android:layout_below="@+id/labelPetName"
-        android:layout_alignLeft="@+id/labelPetName"
-        android:layout_alignStart="@+id/labelPetName" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textPetSpecie"
+                android:textSize="24sp"
+                android:layout_below="@+id/textPetSex"
+                android:layout_alignLeft="@+id/textPetSex"
+                android:layout_alignStart="@+id/textPetSex" />
 
-    <TextView
-        android:text="Specie:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/labelPetSpecie"
-        android:textSize="24sp"
-        android:textStyle="normal|bold"
-        android:layout_below="@+id/labelPetSex"
-        android:layout_alignLeft="@+id/labelPetSex"
-        android:layout_alignStart="@+id/labelPetSex" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textOwnerName"
+                android:textSize="24sp"
+                android:layout_below="@+id/textDadosDono"
+                android:layout_toRightOf="@+id/labelOwnerPhone"
+                android:layout_toEndOf="@+id/labelOwnerPhone"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp" />
 
-    <TextView
-        android:text="Name:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/labelPetName"
-        android:textSize="24sp"
-        android:textStyle="normal|bold"
-        android:layout_alignTop="@+id/imagePetImage"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="13dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textOwnerEmail"
+                android:textSize="24sp"
+                android:layout_below="@+id/textOwnerName"
+                android:layout_alignLeft="@+id/textOwnerName"
+                android:layout_alignStart="@+id/textOwnerName" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textOwnerPhone"
+                android:textSize="24sp"
+                android:layout_below="@+id/textOwnerEmail"
+                android:layout_alignLeft="@+id/textOwnerEmail"
+                android:layout_alignStart="@+id/textOwnerEmail" />
+
+            <TextView
+                android:text="Pet Informations"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textSize="30sp"
+                android:textStyle="normal|bold"
+                android:textAllCaps="false" />
+
+            <TextView
+                android:text="Owner Informations"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textDadosDono"
+                android:textSize="30sp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:text="Email:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/labelOwnerEmail"
+                android:textSize="24sp"
+                android:layout_below="@+id/labelOwnerName"
+                android:layout_alignLeft="@+id/labelOwnerPhone"
+                android:layout_alignStart="@+id/labelOwnerPhone"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:text="Name:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/labelOwnerName"
+                android:textSize="24sp"
+                android:layout_below="@+id/textDadosDono"
+                android:layout_alignLeft="@+id/labelOwnerEmail"
+                android:layout_alignStart="@+id/labelOwnerEmail"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:text="Phone:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/labelOwnerPhone"
+                android:textSize="24sp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_below="@+id/labelOwnerEmail"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:text="Sex:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/labelPetSex"
+                android:textSize="24sp"
+                android:textStyle="normal|bold"
+                android:layout_below="@+id/labelPetName"
+                android:layout_alignLeft="@+id/labelPetName"
+                android:layout_alignStart="@+id/labelPetName" />
+
+            <ImageView
+                app:srcCompat="@android:drawable/ic_menu_gallery"
+                android:id="@+id/imagePetImage"
+                android:layout_marginTop="9dp"
+                android:layout_height="120dp"
+                android:layout_width="120dp"
+                android:layout_below="@+id/textView3"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:text="Specie:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/labelPetSpecie"
+                android:textSize="24sp"
+                android:textStyle="normal|bold"
+                android:layout_below="@+id/labelPetSex"
+                android:layout_alignLeft="@+id/labelPetSex"
+                android:layout_alignStart="@+id/labelPetSex" />
+
+            <TextView
+                android:text="Name:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/labelPetName"
+                android:textSize="24sp"
+                android:textStyle="normal|bold"
+                android:layout_below="@+id/imagePetImage"
+                android:layout_alignLeft="@+id/labelOwnerName"
+                android:layout_alignStart="@+id/labelOwnerName" />
+
+        </RelativeLayout>
+
+
+    </ScrollView>
 
 </RelativeLayout>
